# yapcol

./: .gitignore  Cargo.toml  LICENSE.md  README.md  example.icl  rustfmt.toml  yapcol.dcl  yapcol.icl
.github/workflows/: ci.yaml
examples/: README.md  evaluate_expression.rs  evaluate_expression_string.rs  evaluate_expression_token.rs
examples/expression/: mod.rs
src/: error.rs  input.rs  lib.rs  parser.rs
src/combinators/: any.rs  attempt.rs  between.rs  chain.rs  choice.rs  count.rs  either.rs  end_of_input.rs  is.rs  look_ahead.rs  many.rs  many_until.rs  maybe.rs  mod.rs  not_followed_by.rs  option.rs  satisfy.rs  separated_by.rs  success.rs
src/combinators/many/: core.rs  many0.rs  many0_discard.rs  many0_up_to.rs  many0_up_to_discard.rs  many1.rs  many1_discard.rs  many1_up_to.rs  many1_up_to_discard.rs  many_at_least_discard.rs  many_until.rs  mod.rs  test_utils.rs
src/combinators/repetition/: at_least.rs  at_least_collect.rs  core.rs  count.rs  count_collect.rs  many.rs  many_collect.rs  many_until.rs  many_until_collect.rs  mod.rs  once_or_more.rs  once_or_more_collect.rs  once_or_more_until.rs  once_up_to.rs  (+4 more)
src/input/: core.rs  lookahead.rs  mod.rs  position.rs  source.rs  string.rs  tests.rs  token.rs
src/tests/: and.rs  and_then.rs  any.rs  attempt.rs  between.rs  chain_left.rs  chain_right.rs  choice.rs  count.rs  end_of_input.rs  is.rs  look_ahead.rs  many0.rs  many1.rs  many_until.rs  map.rs  maybe.rs  mod.rs  not_followed_by.rs  option.rs  parse_expression.rs  parse_number.rs  parse_string.rs  satisfy.rs  separated_by0.rs  separated_by1.rs
(+32 files in other folders)
