[package]
name = "yapcol"
description = "Yet Another Parser Combinator Library - YAPCoL"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Matheus Amazonas"]
readme = "README.md"
homepage = "https://github.com/matheusamazonas/yapcol"
repository = "https://github.com/matheusamazonas/yapcol"
categories = ["parsing"]
keywords = ["parser", "combinator", "parsec"]

[dependencies]

[lints.clippy]
tabs_in_doc_comments = "allow"
